erDiagram
    %% ============================================
    %% MODELO ENTIDAD-RELACIÓN - SISTEMA Mil Burbujas
    %% Tienda de Productos de Belleza, Limpieza y Cosméticos
    %% ============================================

    %% ===== MÓDULO CORE / SEGURIDAD =====
    USUARIO {
        int usuario_id PK
        varchar nombre_completo
        varchar email UK
        varchar contrasena_hash
        varchar rol
        varchar estado
        datetime fecha_creacion
        datetime ultimo_acceso
    }

    CONFIGURACION {
        int config_id PK
        varchar clave UK
        varchar valor
        varchar descripcion
        varchar tipo_dato
        datetime fecha_modificacion
    }

    AUDITORIA {
        bigint auditoria_id PK
        int usuario_id FK
        varchar tabla_afectada
        varchar operacion
        varchar registro_id
        text datos_anteriores
        text datos_nuevos
        varchar ip_local
        datetime fecha_hora
    }

    %% ===== MÓDULO CATÁLOGO =====
    CATEGORIA {
        int categoria_id PK
        int categoria_padre_id FK
        varchar nombre UK
        varchar descripcion
        int nivel
        varchar estado
        datetime fecha_creacion
        datetime fecha_modificacion
    }

    MARCA {
        int marca_id PK
        varchar nombre UK
        varchar descripcion
        varchar estado
        datetime fecha_creacion
    }

    LINEA_PRODUCTO {
        int linea_id PK
        int marca_id FK
        varchar nombre
        varchar descripcion
        varchar estado
        datetime fecha_creacion
    }

    UNIDAD_MEDIDA {
        int unidad_id PK
        varchar nombre UK
        varchar abreviatura UK
        varchar tipo
        varchar estado
    }

    PRODUCTO {
        int producto_id PK
        varchar codigo UK
        varchar codigo_barras UK
        varchar nombre
        varchar descripcion
        int categoria_id FK
        int marca_id FK
        int linea_id FK
        int unidad_id FK
        decimal precio_referencia_compra
        decimal precio_venta
        decimal precio_venta_minimo
        int stock_actual
        int stock_minimo
        int stock_maximo
        date fecha_caducidad
        int dias_alerta_caducidad
        boolean aplica_iva_compra
        varchar estado
        datetime fecha_creacion
        datetime fecha_modificacion
    }

    %% ===== MÓDULO PROVEEDORES =====
    PROVEEDOR {
        int proveedor_id PK
        varchar ruc_cedula UK
        varchar razon_social
        varchar nombre_contacto
        varchar telefono
        varchar whatsapp
        varchar email
        varchar direccion
        varchar tipo_credito
        int plazo_credito_dias
        varchar frecuencia_pedido
        varchar dia_visita
        text observaciones
        varchar estado
        datetime fecha_creacion
        datetime fecha_modificacion
    }

    PROVEEDOR_PRODUCTO {
        int proveedor_producto_id PK
        int proveedor_id FK
        int producto_id FK
        decimal precio_compra
        decimal precio_compra_con_iva
        boolean incluye_iva
        boolean es_proveedor_principal
        datetime fecha_ultimo_precio
        varchar estado
    }

    PRECIO_REFERENCIA {
        int precio_ref_id PK
        int producto_id FK
        varchar origen
        varchar nombre_comercio
        decimal precio
        date fecha_consulta
        text observaciones
    }

    %% ===== MÓDULO CLIENTES =====
    CLIENTE {
        int cliente_id PK
        varchar cedula UK
        varchar nombres
        varchar apellidos
        varchar telefono
        varchar direccion
        boolean habilitado_credito
        decimal limite_credito
        decimal saldo_pendiente
        varchar frecuencia_pago
        text observaciones
        varchar estado
        datetime fecha_creacion
        datetime fecha_modificacion
    }

    %% ===== MÓDULO COMPRAS =====
    COMPRA {
        int compra_id PK
        varchar numero_factura
        int proveedor_id FK
        int usuario_id FK
        date fecha_compra
        date fecha_recepcion
        decimal subtotal_sin_iva
        decimal monto_iva
        decimal total
        varchar tipo_pago
        int plazo_credito_dias
        varchar estado
        text observaciones
        datetime fecha_creacion
    }

    COMPRA_DETALLE {
        int compra_detalle_id PK
        int compra_id FK
        int producto_id FK
        decimal cantidad
        decimal precio_unitario
        boolean incluye_iva
        decimal precio_sin_iva
        decimal subtotal
        date fecha_caducidad_lote
    }

    %% ===== MÓDULO VENTAS / POS =====
    VENTA {
        int venta_id PK
        varchar numero_comprobante UK
        int cliente_id FK
        int usuario_id FK
        datetime fecha_venta
        decimal subtotal
        decimal descuento
        decimal total
        varchar metodo_pago
        decimal monto_recibido
        decimal cambio
        varchar referencia_transferencia
        boolean es_credito
        boolean comprobante_emitido
        varchar estado
        text observaciones
        datetime fecha_creacion
    }

    VENTA_DETALLE {
        int venta_detalle_id PK
        int venta_id FK
        int producto_id FK
        int promocion_id FK
        decimal cantidad
        decimal precio_unitario
        decimal precio_original
        decimal descuento_unitario
        decimal subtotal
    }

    %% ===== MÓDULO CUENTAS POR COBRAR =====
    CUENTA_COBRAR {
        int cuenta_cobrar_id PK
        varchar numero_cuenta UK
        int cliente_id FK
        int venta_id FK
        decimal monto_original
        decimal saldo_pendiente
        date fecha_emision
        date fecha_vencimiento
        varchar estado_pago
        varchar estado
        text observaciones
        datetime fecha_creacion
    }

    PAGO_CLIENTE {
        int pago_cliente_id PK
        int cuenta_cobrar_id FK
        int usuario_id FK
        decimal monto_pago
        varchar metodo_pago
        varchar referencia_transferencia
        date fecha_pago
        text observaciones
        varchar estado
        datetime fecha_creacion
    }

    %% ===== MÓDULO CUENTAS POR PAGAR =====
    CUENTA_PAGAR {
        int cuenta_pagar_id PK
        varchar numero_cuenta UK
        int proveedor_id FK
        int compra_id FK
        decimal monto_original
        decimal saldo_pendiente
        date fecha_emision
        date fecha_vencimiento
        varchar estado_pago
        varchar estado
        text observaciones
        datetime fecha_creacion
    }

    PAGO_PROVEEDOR {
        int pago_proveedor_id PK
        int cuenta_pagar_id FK
        int usuario_id FK
        decimal monto_pago
        varchar metodo_pago
        varchar referencia_transferencia
        date fecha_pago
        text observaciones
        varchar estado
        datetime fecha_creacion
    }

    %% ===== MÓDULO AJUSTES DE INVENTARIO =====
    AJUSTE_INVENTARIO {
        int ajuste_id PK
        varchar numero_ajuste UK
        int producto_id FK
        int usuario_id FK
        varchar tipo_ajuste
        decimal cantidad
        varchar motivo
        int producto_cambio_id FK
        text observaciones
        varchar estado
        datetime fecha_creacion
    }

    MOVIMIENTO_INVENTARIO {
        bigint movimiento_id PK
        int producto_id FK
        varchar tipo_movimiento
        varchar origen
        int documento_id
        decimal cantidad
        int stock_anterior
        int stock_posterior
        datetime fecha_movimiento
    }

    %% ===== MÓDULO PROMOCIONES =====
    PROMOCION {
        int promocion_id PK
        varchar nombre UK
        varchar descripcion
        varchar tipo_promocion
        decimal descuento_porcentaje
        decimal precio_promocional
        date fecha_inicio
        date fecha_fin
        boolean activa
        varchar estado
        datetime fecha_creacion
        datetime fecha_modificacion
    }

    PROMOCION_PRODUCTO {
        int promo_producto_id PK
        int promocion_id FK
        int producto_id FK
        decimal cantidad_en_kit
        decimal precio_individual_kit
    }

    %% ===== MÓDULO FINANCIERO =====
    GASTO_OPERATIVO {
        int gasto_id PK
        int usuario_id FK
        varchar tipo_gasto
        varchar descripcion
        decimal monto
        date fecha_gasto
        varchar metodo_pago
        varchar comprobante
        varchar estado
        datetime fecha_creacion
    }

    CIERRE_CAJA {
        int cierre_id PK
        int usuario_id FK
        date fecha_cierre
        decimal total_ventas_efectivo
        decimal total_ventas_transferencia
        decimal total_ventas_credito
        decimal total_compras
        decimal total_gastos
        decimal efectivo_esperado
        decimal efectivo_real
        decimal diferencia
        text observaciones
        varchar estado
        datetime fecha_creacion
    }

    %% ===== RELACIONES =====

    %% Catálogo
    CATEGORIA ||--o{ CATEGORIA : "padre-hija"
    CATEGORIA ||--o{ PRODUCTO : "clasifica"
    MARCA ||--o{ PRODUCTO : "identifica"
    MARCA ||--o{ LINEA_PRODUCTO : "agrupa"
    LINEA_PRODUCTO ||--o{ PRODUCTO : "pertenece"
    UNIDAD_MEDIDA ||--o{ PRODUCTO : "mide"

    %% Proveedor-Producto (N:M)
    PROVEEDOR ||--o{ PROVEEDOR_PRODUCTO : "ofrece"
    PRODUCTO ||--o{ PROVEEDOR_PRODUCTO : "suministrado_por"
    PRODUCTO ||--o{ PRECIO_REFERENCIA : "tiene_referencia"

    %% Compras
    PROVEEDOR ||--o{ COMPRA : "abastece"
    COMPRA ||--o{ COMPRA_DETALLE : "contiene"
    PRODUCTO ||--o{ COMPRA_DETALLE : "se_compra"
    USUARIO ||--o{ COMPRA : "registra"

    %% Ventas
    CLIENTE ||--o{ VENTA : "compra"
    VENTA ||--o{ VENTA_DETALLE : "contiene"
    PRODUCTO ||--o{ VENTA_DETALLE : "se_vende"
    PROMOCION ||--o{ VENTA_DETALLE : "aplica"
    USUARIO ||--o{ VENTA : "registra"

    %% Cuentas por Cobrar
    CLIENTE ||--o{ CUENTA_COBRAR : "debe"
    VENTA ||--|| CUENTA_COBRAR : "genera"
    CUENTA_COBRAR ||--o{ PAGO_CLIENTE : "recibe"
    USUARIO ||--o{ PAGO_CLIENTE : "registra"

    %% Cuentas por Pagar
    PROVEEDOR ||--o{ CUENTA_PAGAR : "se_le_debe"
    COMPRA ||--|| CUENTA_PAGAR : "genera"
    CUENTA_PAGAR ||--o{ PAGO_PROVEEDOR : "se_paga"
    USUARIO ||--o{ PAGO_PROVEEDOR : "registra"

    %% Ajustes e Inventario
    PRODUCTO ||--o{ AJUSTE_INVENTARIO : "se_ajusta"
    PRODUCTO ||--o{ MOVIMIENTO_INVENTARIO : "registra_movimiento"
    USUARIO ||--o{ AJUSTE_INVENTARIO : "registra"

    %% Promociones
    PROMOCION ||--o{ PROMOCION_PRODUCTO : "incluye"
    PRODUCTO ||--o{ PROMOCION_PRODUCTO : "participa"

    %% Financiero
    USUARIO ||--o{ GASTO_OPERATIVO : "registra"
    USUARIO ||--o{ CIERRE_CAJA : "cierra"

    %% Auditoría
    USUARIO ||--o{ AUDITORIA : "genera"
